feat:  use tasklist control deploy process
